<resources>
    <string name="app_name">Soul Winner</string>
    <string name="app_logo">App logo</string>
    <string name="church_name">Streams of Joy</string>
    <string name="soul_winner_app">Soul Winner App</string>
    <string name="how_soul_winner_works">How Soul Winner Works.</string>
    <string name="slide_left">Slide left</string>
    <string name="slide_right">Slide right</string>
    <string name="sing_in">SIGN IN</string>
    <string name="slider_image_item">Slider image item</string>

    <string name="slide_text1">Create a quick account or membership to get started or sign in with already registered account.</string>
    <string name="slide_text2">Register a non SOJ member to your account and stay connected to follow-up.</string>
    <string name="slide_text3">Keep track of Soul until converted as a full member of streams of Joy to get a soul count.</string>
    <string name="header_text">Lets win a community of souls for Christ</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_login">Remember Login</string>
    <string name="four_digit_code">4 digit code</string>
    <string name="loading">Loading...</string>
    <string name="default_title">Title</string>
    <string name="alert_body">Alert Body</string>
    <string name="ok">Ok</string>
    <string name="dashboard_header_image">Dashboard header image</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="dummy_welcome">Welcome Emmanuel</string>
    <string name="soul">Soul</string>
    <string name="add_soul">Add Soul</string>
    <string name="profile">Profile</string>
    <string name="total_soul_lead_to_christ">Total number of souls you have led to Christ  in the 2019/2020 ministry year is 3</string>
    <string name="zero">0</string>
    <string name="following_up">Following Up</string>
    <string name="pending">Pending</string>
    <string name="established">Established</string>
    <string name="dummy_username">Phillip Emmanuel</string>
    <string name="member">Member</string>
    <string name="won_souls">Won Souls</string>
    <string name="all_souls">All Souls</string>
    <string name="search_souls">Search Souls</string>
    <string name="my_account">My Account</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout">Logout</string>
    <string name="add_new_soul">Add New Soul</string>
</resources>
