<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/profile_menu_container"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:gravity="center"
   >
    <LinearLayout
        android:id="@+id/soul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/soul_icon"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/soul"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add_soul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/add_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:text="@string/add_soul"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_profile_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:text="@string/profile"/>
    </LinearLayout>
</LinearLayout>